# warnings-dropoff-analysis

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run.sh
loaders/: add_languages.py  add_sex.py  add_user_warnings.py  add_wikibreaks.py
plotter/: retired_stats.py  serious_warnings_stats.py  utils.py  warning_stats.py
utils/: convert.py
warnings_dropoff_analysis/: __init__.py  __main__.py
warnings_dropoff_analysis/extractors/: __init__.py  constants.py  retired_extractor.py
warnings_dropoff_analysis/processors/: user_warnings_metrics.py
warnings_dropoff_analysis/types/: __init__.py  user.py
warnings_dropoff_analysis/utils/: __init__.py  collection.py  database.py  how_many_still_breaks.py  writer.py
